<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jiangtj.cloud</groupId>
    <artifactId>parent</artifactId>
    <packaging>pom</packaging>
    <version>0.0.4</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <spring-cloud.version>2022.0.4</spring-cloud.version>
        <spring-cloud-tencent.version>1.12.3-2022.0.4</spring-cloud-tencent.version>
        <spring-boot-admin.version>3.1.7</spring-boot-admin.version>
        <jjwt.version>0.12.3</jjwt.version>
        <!-- <maven.test.skip>true</maven.test.skip> -->
    </properties>

    <modules>
        <!-- core server -->
        <module>core-server</module>
        <module>system-server</module>
        <module>gateway-session</module>
        <!-- third -->
        <module>sba-server</module>
        <!-- template -->
        <module>base-reactive</module>
        <module>base-servlet</module>
        <!-- lib -->
        <module>micro-common</module>
        <module>micro-auth</module>
        <module>micro-sql</module>
        <module>micro-test</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.jiangtj.cloud</groupId>
                <artifactId>micro-auth</artifactId>
                <version>0.0.4</version>
            </dependency>
            <dependency>
                <groupId>com.jiangtj.cloud</groupId>
                <artifactId>micro-common</artifactId>
                <version>0.0.4</version>
            </dependency>
            <dependency>
                <groupId>com.jiangtj.cloud</groupId>
                <artifactId>micro-sql</artifactId>
                <version>0.0.4</version>
            </dependency>
            <dependency>
                <groupId>com.jiangtj.cloud</groupId>
                <artifactId>micro-test</artifactId>
                <version>0.0.4</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-dependencies</artifactId>
                <version>${spring-boot-admin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.tencent.cloud</groupId>
                <artifactId>spring-cloud-tencent-dependencies</artifactId>
                <version>${spring-cloud-tencent.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <processAllModules>true</processAllModules>
                    <removeSnapshot>true</removeSnapshot>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/jiangtj/jc-platform</url>
        </repository>
    </distributionManagement>
</project>